<resources
    xmlns:tools="http://schemas.android.com/tools"
    tools:locale="en">
    <string name="app_name">RasPi Check</string>
    <string name="title_activity_main">RasPi Check</string>
    <string name="title_activity_new_raspi">Add Pi</string>
    <string name="title_activity_settings">Settings</string>
    <string name="core_temp">CORE Temperature</string>
    <string name="core_freq">CORE Frequency</string>
    <string name="arm_freq">ARM Frequency</string>
    <string name="core_volt">CORE Volt</string>
    <string name="host">Hostname/IP</string>
    <string name="user">Username</string>
    <string name="password">Password</string>
    <string name="ssh_credentials">SSH Credentials</string>
    <string name="no_connection">Please turn on WiFi.</string>
    <string name="no_hostname_specified">No hostname specified. Please check your settings.</string>
    <string name="no_username_specified">No username specified. Please check your settings.</string>
    <string name="no_password_specified">No password specified. Please check your settings.</string>
    <string name="raspi_device_name_hint">Name</string>
    <string name="raspi_device_host_hint">Hostname / IP</string>
    <string name="raspi_device_user_hint">SSH username</string>
    <string name="raspi_device_password_hint">SSH password</string>
    <string name="raspi_device_description_hint">Description (optional)</string>
    <string name="default_ssh_port" translatable="false">22</string>
    <string name="raspi_device_button_new">Save</string>
    <string name="pref_temp_scala_title">Temperature scale</string>
    <string name="pref_temperature_scala_default" translatable="false">°C</string>
    <string name="pref_group_display_settings_title">Display settings</string>
    <string name="last_update">Last refresh</string>
    <string name="no_device_available">Please add a Raspberry Pi first.</string>
    <string name="new_raspi_text">Enter your Raspberry Pi device information.</string>
    <string name="ssh_port">SSH port</string>
    <string name="new_raspi_description">Additional description</string>
    <string name="new_raspi_description_hint">Add additional description here...</string>
    <string name="overclocking_header">Overclocking</string>
    <string name="system_header">System</string>
    <string name="uptime_started">Startup</string>
    <string name="average_load">Average load</string>
    <string name="total_memory">Main memory</string>
    <string name="free_memory">Free memory</string>
    <string name="cpu_serial">Serial No</string>
    <string name="ip_addr_label">IP address</string>
    <string name="distribution">Distribution</string>
    <string name="kernel">Kernel</string>
    <string name="architecture">Architecture</string>
    <string name="model">Model</string>
    <string name="disk_header_filesystem">Filesystem</string>
    <string name="disk_header_size">Size</string>
    <string name="disk_header">Disk Usage</string>
    <string name="disk_header_avail">Available</string>
    <string name="disk_header_usedper">Used%</string>
    <string name="please_add_a_raspberry_pi">Please add a Raspberry Pi.</string>
    <string name="activity_title_edit_raspi">Edit Pi</string>
    <string name="disk_header_mounted_on">Mounted on</string>
    <string name="temperature_scala_summary">Temperature scale (Celsius, Fahrenheit)</string>
    <string name="process_header">Processes</string>
    <string name="header_pid" translatable="false">PID</string>
    <string name="header_tty" translatable="false">TTY</string>
    <string name="header_cpu_time" translatable="false">CPU</string>
    <string name="header_command">Command</string>
    <string name="pref_group_query_settings_title">Query</string>
    <string name="pref_query_hide_root_title">Hide root processes</string>
    <string name="pref_query_hide_root_summary">Check if you want to hide root processes.</string>
    <string name="pref_query_hide_root_summaryOn">No root processes are shown.</string>
    <string name="pref_query_hide_root_summaryOff">All processes are shown.</string>
    <string name="new_raspi_minimum">Please specify at minimum a name, host, ssh username and password.</string>
    <string name="raspi_device_sudo_password_hint">sudo password</string>
    <string name="sudo_password">Sudo password</string>
    <string name="reboot_success">Reboot command sent.</string>
    <string name="reboot_fail">Reboot failed. Check your connection settings and sudo password.</string>
    <string name="pref_frequency_unit_default" translatable="false">MHz</string>
    <string name="pref_frequency_unit_summary">Hz, MHz or GHz</string>
    <string name="pref_frequency_unit_title">Frequency unit</string>
    <string name="firmware_version">Firmware</string>
    <string name="network_header">Network</string>
    <string name="network_interface">Interface</string>
    <string name="network_status">Status</string>
    <string name="network_status_up">Up</string>
    <string name="network_status_down">Down</string>
    <string name="network_ip" translatable="false">IP</string>
    <string name="network_signal">Signal</string>
    <string name="network_link">Quality</string>
    <string name="pref_group_about">About</string>
    <string name="pref_github">Source / Issue Tracker</string>
    <string name="pref_github_summary" translatable="false">github.com/eidottermihi/rpicheck</string>
    <string name="pref_dev_email">Contact developer</string>
    <string name="pref_dev_email_summary" translatable="false">eidottermihi@gmail.com</string>
    <string name="pref_rate_app">Rate app</string>
    <string name="pref_rate_app_summary">If you like RasPi Check, please take a moment to rate it.</string>
    <string name="pref_version">Version</string>
    <string name="shutdown_type_title">Shutdown options</string>
    <string name="halt_success">Halt command sent.</string>
    <string name="halt_fail">Halt failed. Check your connection settings and sudo password.</string>
    <string name="validation_msg_name">Name cannot be blank.</string>
    <string name="validation_msg_host">Hostname cannot be blank.</string>
    <string name="validation_msg_user">Username cannot be blank.</string>
    <string name="validation_msg_password">Password cannot be blank.</string>
    <string name="validation_msg_port">Not a valid port.</string>
    <string name="update_successful">Pi successfully updated.</string>
    <string name="new_pi_created">Pi created.</string>
    <string name="exception_dialog_title">Oops!</string>
    <string name="authentication_failed">SSH authentication failed. Please check your credentials.</string>
    <string name="connection_failed">Could not establish a connection. Please check hostname and your network.</string>
    <string name="errormessages_dialog_title">Sorry...</string>
    <string name="transport_exception">A transport exception occurred. Please try again.</string>
    <string name="unexpected_exception">An unexcepted exception occurred. Please try again.</string>
    <string name="exception_vcgencmd">The tool \'vcgencmd\' was not found on your Pi. Make sure it is located under \'/usr/bin\' or \'/opt/vc/bin\' and your SSH user is in group \'video\'.</string>
    <string name="weird_exception">Something weird went wrong. Please take a look at the log file.</string>
    <string name="changelog_full_title">Change Log</string>
    <string name="changelog_title">What\'s New</string>
    <string name="changelog_ok_button">OK</string>
    <string name="changelog_show_full">more...</string>
    <string name="pref_group_log">Log</string>
    <string name="pref_log_title">View log</string>
    <string name="pref_log_title_summary">Views the log of this app</string>
    <string name="pref_screen_about">About RasPi Check</string>
    <string name="pref_screen_about_summary">Version, changelog, developer</string>
    <string name="pref_changelog_title">View changelog</string>
    <string name="pref_changelog_title_summary">Views changelog of this app</string>
    <string name="pref_debug_log_summary">Print debug messages to the log.</string>
    <string name="pref_debug_log_summary_on">Debug logging enabled.</string>
    <string name="pref_debug_log_summary_off">Debug level logging disabled.</string>
    <string name="pref_debug_log_title">Debug logging</string>
    <string name="new_raspi_continue">Continue</string>
    <string name="new_raspi_auth_method">Authentication method</string>
    <string name="raspi_key_password_hint">Key passphrase</string>
    <string name="raspi_key_password_empty">Key passphrase cannot be blank.</string>
    <string name="raspi_auth_keyfile_hint">Private key (PKCS8/OpenSSH format)</string>
    <string name="raspi_auth_button_keyfile">Choose keyfile</string>
    <string name="title_filedialog">Choose keyfile</string>
    <string name="dialog_save_passphrase">Save passphrase</string>
    <string name="dialog_passphrase_hint">passphrase</string>
    <string name="dialog_passphrase_text">Please enter passphrase for private key.</string>
    <string name="label_cmd_name">Name</string>
    <string name="label_cmd_name_hint">e.g. \'reboot\'</string>
    <string name="label_cmd_command">Command</string>
    <string name="label_cmd_command_hint">e.g. \'shutdown now -r\'</string>
    <string name="action_new">New</string>
    <string name="action_new_raspi">New Pi</string>
    <string name="action_edit">Edit</string>
    <string name="action_edit_raspi">Edit Pi</string>
    <string name="action_delete">Delete</string>
    <string name="action_delete_raspi">Delete Pi</string>
    <string name="action_settings">Settings</string>
    <string name="action_shutdown">Shutdown</string>
    <string name="action_refresh">Refresh</string>
    <string name="placeholder_hint_text">You can use placeholders like \'${my_secret}\'. They will be replaced by your input when you actually run the command.</string>
    <string name="placeholder_non_prompting_date_hint_text">\'%{date(format)}\' - Will be automatically replaced with the current date/time. format must be an valid date/time format (e.g. MM-dd-yyy).</string>
    <string name="placeholder_non_prompting_pi_hint_text">\'%{pi.property}\' - Will be automatically replaced with a property of your Pi. Available properties are: name, host, user, pass, port, sudopass.</string>
    <string name="placeholder_special_hint">Special placeholders:</string>
    <string name="pref_load_avg_default" translatable="false">FIVE_MINUTES</string>
    <string name="pref_load_avg_summary">Time period for average load calculation.</string>
    <string name="pref_load_avg_title">Average load time period</string>
    <string name="widget_pi">Choose Raspberry Pi</string>
    <string name="widget_update_interval">Update interval</string>
    <string name="default_update_interval" translatable="false">60</string>
    <string name="widget_update_interval_custom_text">Update interval (in minutes)</string>
    <string name="used_memory">Used memory</string>
    <string name="facebook_url" translatable="false">https://www.facebook.com/raspicheck</string>
    <string name="pref_facebook_summary">Keep yourself updated on RasPi Check</string>
    <string name="pref_fb_title" translatable="false">Facebook</string>
    <string name="action_share">Share</string>
    <string name="label_cmd_timeout">Timeout in seconds</string>
    <string name="timeout_hint_title">Timeout:</string>
    <string name="timeout_hint_text">Customize the default timeout of 60 seconds if your command takes longer to complete.</string>
    <string name="pref_query_show_system_time_summary">Check to show system time.</string>
    <string name="pref_query_show_system_time_summaryOff">System time is hidden.</string>
    <string name="pref_query_show_system_time_summaryOn">System time is shown.</string>
    <string name="pref_query_show_system_time_title">Show system time</string>
</resources>